--- a/qiita/デザイン学習日記0002.md
+++ b/qiita/デザイン学習日記0002.md
@@ -1,7 +1,33 @@
-# デザイン学習日記0002
-
 ## mediaの使用
+```css
+@media screen and ( condition ){}
+
+e.g
+@media screen and (min-width: 992px){}
+widthが992より大きい時に適用できるルール
+max-width: 992pxだと逆
+
+```
+
 
 ## PDF.js
 
+### 使用理由
+
+* モバイルでもPDFを読み込み、読むことが可能になる、ページ遷移、redirectionなし
+* 
+### 問題点
+
+* ピンチアウトとかで、メモリが足りなくなって落ちる
+
+### Canvas使う場合
+
+* chromeではzoom inできない原因不明、safariだとOK
+        
+    
+        
+## JS vs CSS
+
+* 動的に変換するのはCSSの方が強い mediaで制御する
+* JSで生成されたルールが後でCSSで変更できないこともある
 
